GA release of v0.0.7 (#71)
The GA Release Adds a host of features and nomenclature updates. Please take a look at the commit summary below!

==============================================================

* major commit. added BlockingTask, heavily modified the Task API

* Added 'final' modifiers to BlockedObject.java + RetrievableTask.java

* Updated class headers for BlockedObject.java as well as MethodBlockedObject.java

* Removed BlockingTask.defaultName() method in favor of using a local constant to reduce the overhead of a method call.

* Updated Java compiler compliance version to Java SE 13.0.1

* Nomenclature updates for BlockedTask.java and MethodBlockedTask.java

* Updated Type Parameters in BlockingTask.java and BlockedTask.java

* Updated Type Parameters in BlockingTask.java and BlockedTask.java, as well as added detailed documentation for the JBrew Javadocs.

* Removed unneccessary comment from BlockingTestInstantiationTest.java

* Added TODO item in BlockingTask.java

* Updated pom.xml mvn-site-plugin configuration tag.

* Updated README.md to reflect compiler source and target of 1.8+

* Updated RetrievableTask.java to reflect correct generic type-casting.

* Updated build.yml to integrate AWS CodeBuild + SonarCloud.

* Updated RetrievableTask.java method nomenclature and reflected changes in Javadocs.

* Updated RetrievableTask.java method nomenclature and reflected changes in Javadocs.

* Updated classpath and eclipse settings for concurrent artifact.

* Updated classpath and for concurrent artifact JRE compliance.

* Updated .settings {jdt.core.prefs + jdt.launching.prefs} for concurrent artifact JRE compliance @ 1.8.

* Bump nexus-staging-maven-plugin from 1.6.7 to 1.6.8

Bumps nexus-staging-maven-plugin from 1.6.7 to 1.6.8.

Signed-off-by: dependabot-preview[bot] <support@dependabot.com>

Bumps maven-scm-provider-gitexe from 1.9.5 to 1.11.2.

Signed-off-by: dependabot-preview[bot] <support@dependabot.com>

* Bump maven-site-plugin from 3.7.1 to 