@@ -4,19 +4,28 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
 import org.jbrew.Testing;
-import org.jbrew.concurrent.ObjectBlockingRetrievableTask;
-import org.jbrew.concurrent.Task;
+import org.jbrew.concurrent.ObjectBlockingTask;
+import org.jbrew.concurrent.RetrievableTask;
 import org.junit.Test;
 
 @Testing
 public class ObjectBlockingRetrievableTaskUnitTest {
 	
 	/**
-	 * Tests to make sure that an ObjectBlockingRetrievableTask can be instantiated.
+	 * Tests to make sure that an ObjectBlockingTask can be instantiated.
 	 */
 	@Test
 	public void InstantiateOBRT(){
-		Task<Integer> task = new OBRT<>();
+		RetrievableTask<Integer> task = new OBRT<>();
+		assertNotNull(task);
+	}
+	
+	/**
+	 * Tests to make sure that an ObjectBlockingTask can be instantiated.
+	 */
+	@Test
+	public void InstantiateOBRT2(){
+		RetrievableTask<Integer> task = new OBRT<>();
 		assertNotNull(task);
 	}
 	
@@ -24,20 +33,18 @@ public class ObjectBlockingRetrievableTaskUnitTest {
 	 * Tests to make sure ObjectBlockingRetrievableTasks values are appropriately set.
 	 * @throws InterruptedException
 	 */
-	@SuppressWarnings("deprecation")
 	@Test
 	public void testGetVal() throws InterruptedException{
-		Task<Integer> num = new OBRT<>();
+		RetrievableTask<Integer> num = new OBRT<>();
 		new Thread(num).start();
-		System.out.println(num.getVal());
-		assertEquals(num.getVal(), new Integer(69).intValue());
+		assertEquals(num.retrieve(), Integer.valueOf(69));
 	}
 	
-	private class OBRT<T> extends ObjectBlockingRetrievableTask<Integer>{
+	private class OBRT<T> extends ObjectBlockingTask<Integer>{
 		@Override
 		protected void execute() {
 			System.out.println("Inside OBRT's execute()");
-			this.setVal(69);
+			this.accept(69);
 			//simulate long run non-retrievable task
 			try {
 				Thread.sleep(10);
